Modification de la structure des critères de recherche.